# partition

./: README.md  partition.cabal
bench/: Main.hs
src/: Lib.hs
test/: Main.hs
