name:                partition
version:             0.1.0.0
synopsis:            An experiment in making Data.List.partition generic
description:         Please see README.md
homepage:            https://github.com/eborden/partition#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Rutledge Borden
maintainer:          evan@evan-borden.com
copyright:           2016 Evan Rutledge borden
category:            Experiment
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -O2

test-suite partition-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , hspec
                     , partition
                     , QuickCheck
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark partition-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , partition
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eborden/partition
